@@ -16,85 +16,50 @@
 
 package org.gradle.performance.fixture
 
-import org.gradle.integtests.fixtures.executer.GradleDistribution
-import org.gradle.integtests.fixtures.executer.UnderDevelopmentGradleDistribution
 import org.gradle.internal.jvm.Jvm
 import org.gradle.internal.os.OperatingSystem
-import org.gradle.performance.measure.MeasuredOperation
-import org.gradle.test.fixtures.file.TestDirectoryProvider
 import org.gradle.util.GradleVersion
 
-class CrossBuildPerformanceTestRunner {
-    TestDirectoryProvider testDirectoryProvider
-    GradleDistribution gradleDistribution = new UnderDevelopmentGradleDistribution()
-    TestProjectLocator testProjectLocator = new TestProjectLocator()
-    GradleExecuterProvider executerProvider = new GradleExecuterProvider()
+class CrossBuildPerformanceTestRunner extends AbstractGradleBuildPerformanceTestRunner<CrossBuildPerformanceResults> {
 
-    OperationTimer timer = new OperationTimer()
+    public CrossBuildPerformanceTestRunner(BuildExperimentRunner experimentRunner, DataReporter<CrossBuildPerformanceResults> dataReporter) {
+        super(experimentRunner, dataReporter)
+    }
 
-    String testGroup
-    String testId
-    int runs = 5
-    int warmUpRuns = 3
-    List<BuildSpecification> buildSpecifications = []
+    protected void defaultSpec(BuildExperimentSpec.Builder builder) {
+        super.defaultSpec(builder)
+        if (builder instanceof GradleBuildExperimentSpec.GradleBuilder) {
+            builder.invocation.distribution(gradleDistribution)
+        }
+    }
 
-    private GCLoggingCollector gcCollector = new GCLoggingCollector()
-    DataCollector dataCollector = new CompositeDataCollector(
-            new MemoryInfoCollector(outputFileName: "build/totalMemoryUsed.txt"),
-            gcCollector)
+    protected void finalizeSpec(BuildExperimentSpec.Builder builder) {
+        super.finalizeSpec(builder)
+        if (builder instanceof GradleBuildExperimentSpec.GradleBuilder) {
+            def invocation = (GradleInvocationSpec.InvocationBuilder) builder.invocation
+            if (!invocation.gradleOptions) {
+                invocation.gradleOptions = ['-Xms2g', '-Xmx2g', '-XX:MaxPermSize=256m']
+            }
+        }
+    }
 
-    CrossBuildPerformanceResults results
-    DataReporter<CrossBuildPerformanceResults> reporter
-
-    CrossBuildPerformanceResults run() {
-        assert !buildSpecifications.empty
-        assert testId
-
-        results = new CrossBuildPerformanceResults(
-                testId: testId,
-                testGroup: testGroup,
-                jvm: Jvm.current().toString(),
-                operatingSystem: OperatingSystem.current().toString(),
-                versionUnderTest: GradleVersion.current().getVersion(),
-                vcsBranch: Git.current().branchName,
-                vcsCommit: Git.current().commitId,
-                testTime: System.currentTimeMillis()
+    @Override
+    CrossBuildPerformanceResults newResult() {
+        new CrossBuildPerformanceResults(
+            testId: testId,
+            testGroup: testGroup,
+            jvm: Jvm.current().toString(),
+            operatingSystem: OperatingSystem.current().toString(),
+            versionUnderTest: GradleVersion.current().getVersion(),
+            vcsBranch: Git.current().branchName,
+            vcsCommits: [Git.current().commitId],
+            testTime: System.currentTimeMillis()
         )
-
-        runAllSpecifications()
-
-        reporter.report(results)
-        results
     }
 
-    void runAllSpecifications() {
-        buildSpecifications.each { buildSpecification ->
-            gcCollector.useDaemon(buildSpecification.useDaemon);
-            File projectDir = testProjectLocator.findProjectDir(buildSpecification.projectName)
-            warmUpRuns.times {
-                executerProvider.executer(buildSpecification, gradleDistribution, projectDir, testDirectoryProvider).run()
-            }
-            def operations = results.buildResult(buildSpecification)
-            runs.times {
-                runNow(buildSpecification, projectDir, operations)
-            }
-            if (buildSpecification.useDaemon) {
-                executerProvider.executer(buildSpecification, gradleDistribution, projectDir, testDirectoryProvider).withTasks().withArgument('--stop').run()
-            }
-        }
+    @Override
+    MeasuredOperationList operations(CrossBuildPerformanceResults result, BuildExperimentSpec spec) {
+        result.buildResult(spec.displayInfo)
     }
 
-    void runNow(BuildSpecification buildSpecification, File projectDir, MeasuredOperationList results) {
-        def executer = executerProvider.executer(buildSpecification, gradleDistribution, projectDir, testDirectoryProvider)
-        dataCollector.beforeExecute(projectDir, executer)
-
-        def operation = timer.measure { MeasuredOperation operation ->
-            executer.run()
-        }
-
-        if (operation.exception == null) {
-            dataCollector.collect(projectDir, operation)
-        }
-        results.add(operation)
-    }
 }
